# Arqma-GUI-MM

./: .env  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .notenv  .npmrc  CHANGELOG.md  CONTRIBUTING.md  README.md  babel.config.js  evm-networks.json  jest.config.mjs  jsconfig.json  package.json  quasar.config.js  rust-toolchain.toml
.cursor/rules/: english-github-artifacts.mdc  no-git-attribution-trailers.mdc  tauri-rebuild-stop-processes.mdc  use-arqtras-account-only.mdc
.github/: dependabot.yml
.github/workflows/: android-release.yml  desktop-release.yml  development.yml  flutter-desktop-artifacts.yml  flutter-github-release.yml  flutter-test.yml  flutter-verify.yml  flutter-wallet-mirror.yml  flutter.yml  mobile-release.yml  prune-actions-runs.yml  publish-snap.yml  release.yml  rust.yml  tauri-app.yml  wallet-flutter-ffi.yml
.husky/: commit-msg  pre-push  prepare-commit-msg
__mocks__/: electron.js
docs/: FLUTTER_NATIVE_FROM_TAURI.md  WALLET_RUST_PORT.md
docs/audit/: FLUTTER-CI-LOG-ANALYSIS-2026-06-03.md  FLUTTER-FULL-AUDIT-2026-06-03.md  FLUTTER-MULTIAGENT-AUDIT-2026-06-03.md
flutter-android/: README.md
flutter-android/arqma_wallet_android/: .gitignore  README.md  pubspec.yaml
flutter-mobile/: README.md
flutter-mobile/arqma_wallet_mobile/: .gitignore  README.md  pubspec.yaml
flutter/arqma_wallet_gui/: .gitignore  .metadata  README.md  pubspec.yaml
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/arqma-wallet-flutter-ffi/: Cargo.toml  README.md  build.rs
rust/arqma-wallet-flutter-ffi/ios_stubs/: clear_cache.cpp
rust/arqma-wallet-flutter-ffi/src/: lib.rs
rust/arqma-wallet-rpc/: Cargo.toml  README.md
rust/arqma-wallet-rpc/src/: error.rs  http_digest.rs  lib.rs  rpc_method_aliases.rs  traits.rs  unified_client.rs  upstream_paths.rs  wallet2_client.rs  wallet_http_client.rs
rust/arqma-wallet2-api/: Cargo.toml  build.rs
rust/arqma-wallet2-api/src/: lib.rs  native.rs  wallet2_api_wrapper.cpp  wallet2_api_wrapper.hpp
rust/core/: Cargo.toml
rust/core/src/: config.rs  defaults.rs  error.rs  lib.rs  merge.rs  startup.rs  validate.rs
rust/daemon/: Cargo.toml
rust/daemon/src/: main.rs
rust/docs/: NATIVE_WALLET2.md
rust/tauri-app/: evm-networks.json  index.html  package.json  vite.config.js
rust/tauri-app/scripts/: cargo-runner-gnu-flat-sync.cmd  cargo-runner-gnu-flat-sync.mjs  ensure-frontend-dist.mjs  kill-tauri-dev-processes.mjs  locale-audit.mjs  pack-linux-tarball.sh  postbuild-rename-windows.mjs  run-bash-script.mjs  run-windows-gnu-tauri-ci.mjs  tauri-ci-gnu-no-frontend.json  with-rust-target.mjs
rust/tauri-app/src/: auto-imports.d.ts  main.js
rust/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
rust/tauri-app/src-tauri/capabilities/: default.json
rust/tauri-app/src-tauri/src/: agent_debug.rs  arqma_paths_config.rs  backend_state.rs  core_handler.rs  daemon_check.rs  daemon_handler.rs  daemon_heartbeat.rs  daemon_process.rs  gateway_emit.rs  http_digest_arqma.rs  json_rpc_client.rs  json_util.rs  lib.rs  main.rs  native_bin.rs  remote_scan.rs  solo_pool.rs  solo_pool_sink.rs  startup_run.rs  subprocess.rs  sync_debug.rs  wallet_copy_old_gui.rs  wallet_diag.rs  wallet_handler.rs  wallet_heartbeat.rs  wallet_list_fs.rs  wallet_password.rs  wallet_pools.rs  wallet_process.rs  wallet_relay_ops.rs  wallet_rpc_electron.rs  wallet_rpc_log_height.rs
rust/tauri-app/src/boot/: axios.js  i18n.js  receiver.js  timeago.js
rust/tauri-app/src/bridge/: api.js
rust/tauri-app/src/components/: address_book_details.vue  address_details.vue  address_header.vue  arqma_field.vue  footer.vue  format_arqma.vue  mainmenu.vue  pool_list_tabular.vue  receive_item.vue  settings_general.vue  solo_pool_modal.vue  swap_list_tabular.vue  tx_details.vue  tx_list.vue  wallet_settings.vue
rust/tauri-app/src/composables/: debounce.js  wallet_password.js
rust/tauri-app/src/css/: app.scss  quasar.variables.scss
rust/tauri-app/src/layouts/init/: loading.vue
rust/tauri-app/src/layouts/wallet/: main.vue
rust/tauri-app/src/layouts/wallet-select/: main.vue
rust/tauri-app/src/locales/: ar-SA.json  cn-CN.json  de-DE.json  en-US.json  es-ES.json  fr-FR.json  jp-JP.json  ms-MY.json  pl-PL.json  pt-BR.json  ru-RU.json  ua-UA.json
rust/tauri-app/src/pages/init/: index.vue  quit.vue  welcome.vue
rust/tauri-app/src/pages/wallet/: blank.vue  send.vue  solo-pool.vue  staking-pools.vue  swap.vue  txhistory.vue
rust/tauri-app/src/pages/wallet-select/: created.vue  import-legacy.vue  import.vue  index.vue  restore.vue
rust/tauri-app/src/receiver/: receiver.js
rust/tauri-app/src/router/: index.js  routes.js
rust/tauri-app/src/store/: index.js
rust/tauri-app/src/store/gateway/: actions.js  getters.js  mutations.js  state.js
rust/tauri-app/src/validators/: common.js
rust/tauri-app/src/walletConnect/: provider.js
rust/tool/: build_and_install_mobile_ios_device.sh  build_android_wallet_merged.sh  build_ffi_x86_64_android.sh  build_flutter_solo_pool.ps1  build_flutter_solo_pool.sh  build_ios_device_verbose.sh  build_ios_wallet_merged.sh  build_mobile_wallet_ffi_android.sh  build_mobile_wallet_ffi_ios.sh  build_native_wallet_flutter_ffi_unix.sh  build_native_wallet_flutter_ffi_windows.ps1  build_wallet_flutter_ffi.sh  clean-local-windows-build.ps1  copy_android_ffi_to_windows.sh  fix_depends_for_android.sh  flutter-ffi-static-hybrid-build.sh
rust/web/: README.md
scripts/: checkout-arqma.ps1  checkout-arqma.sh  prepare-release-bins.ps1  prepare-release-bins.sh
src/: App.vue  index.template.html
src-electron/: app-data-path.js  electron-main.js  electron-preload.js  ipcMainHandler
src-electron/main-process/: auto-updater.js  auto-updater1.js  menu.js
src/boot/: axios.js  i18n.js  receiver.js  timeago.js
src/components/: address_book_details.vue  address_details.vue  address_header.vue  arqma_field.vue  footer.vue  format_arqma.vue  identicon.vue  mainmenu.vue  pool_list_tabular.vue  settings.vue  settings_general.vue  swap_list_tabular.vue  tx_details.vue  tx_list.vue  tx_type_icon.vue  (+1 more)
(+462 files in other folders)
