[workspace]
resolver = "2"
members = [
  "core",
  "daemon",
  "arqma-wallet-rpc",
  "arqma-wallet2-api",
  "arqma-wallet-flutter-ffi",
]

[workspace.package]
version = "5.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/ArqTras/Arqma-GUI-MM"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"

# Faster local near-release FFI builds (optional).
[profile.local]
inherits = "release"
lto = "thin"
codegen-units = 16
