[package]
name = "arqma-wallet2-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust wrapper layer for Arqma wallet2_api.h (native bridge optional via feature)."

[features]
default = []
native-wallet2 = ["dep:cxx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
cxx = { version = "1", optional = true }

[build-dependencies]
cxx-build = "1"
