[package]
name = "arqma-wallet2-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust wrapper for Arqma wallet2_api.h (native C++/FFI bridge)."

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
cxx = "1"

[build-dependencies]
cxx-build = "1"
