[package]
name = "arqma-wallet-core"
version.workspace = true
edition.workspace = true
description = "Czysta logika portfela (RPC, konfiguracja, typy) — wspólna dla Tauri, daemona i ewentualnego web."
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
serde_json = "1.0.140"
