[package]
name = "arqma-daemon-helpers"
version.workspace = true
edition.workspace = true
description = "Optional daemon-related helpers and integration (starter layout; extensions later)."
license.workspace = true
default-run = "arqma-daemon-helpers"

[dependencies]
arqma-wallet-core = { path = "../core" }
serde_json = "1.0.140"

[[bin]]
name = "arqma-daemon-helpers"
path = "src/main.rs"
