[package]
name = "arqma-tauri"
version.workspace = true
description = "Shell Tauri (Rust) — most Electron MainProcess"
authors = ["Arqma"]
build = "build.rs"
edition.workspace = true
license.workspace = true
rust-version = "1.70"

[lib]
name = "arqma_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "arqma-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.9", default-features = true , features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.40.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
arqma-wallet-core = { path = "../../core" }
arboard = "3.4.0"
rfd = "0.15.0"
open = "5.3.0"
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }
md5 = "0.7.0"
base64 = "0.22.1"
rand = "0.8.5"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
